[package]
name = "conerror"
version = "0.1.8"
edition = "2021"
description = "Provides a macro that automatically adds context to errors"
license = "MIT"
repository = "https://github.com/luoshuqi/conerror"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
conerror_macro = "=0.1.5"